--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!--<div id="gridContainer" class="bo4">-->
             <div class="group">
                 <div class="cell">
-                    <div class="box">??</div>
+                    <div class="box"></div>
                 </div>
                 <div class="cell">
                     <div class="box"></div>
