반응형 완성

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
         
 		<!-- script -->
         <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script>
-        <script type="text/javascript" src="/js/juqery-ui.js"></script> <script
-        type="text/javascript" src="/js/common.js"></script>
+        <script type="text/javascript" src="/js/juqery-ui.js"></script> 
+        <script type="text/javascript" src="/js/common.js"></script>
 
     </head>
     <body>
-        <div id="gridContainer" class="bo4" style="overflow: auto">
-		<!--<div id="gridContainer" class="bo4">-->
+        <div id="gridContainer" >
             <div class="group">
                 <div class="cell">
                     <div class="box"></div>
